--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,28 @@
-.App {
-  text-align: center;
+.button{
+	font-size: 30px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.container{
+	width:35%;
+	margin: auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.row{
+	margin-left: 2px;
+	width: 150px;
 }
 
-.App-link {
-  color: #61dafb;
+.btn{
+	margin:1px;
+	align-items: center;
+}
+.heading{
+	margin-top: 10px;
+	text-align: center;
+	font-weight:800;
+	align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#textarea{
+	max-width: 230px;
 }
